@@ -1,3 +1,3 @@
-set OPT=--enable-preview
+set OPT=
 set CP=target\classes
 java %OPT% -cp %CP% puzzle.language.LambdaCalculus2 %1 %2 %3 %4 %5 %6 %7 %8 %9
